[gd_scene load_steps=2 format=3 uid="uid://726yyrm11178"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_eklbu"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_eklbu")

[node name="ContinueButton" type="Button" parent="."]
custom_minimum_size = Vector2(256, 96)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -194.0
offset_right = 128.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 32
text = "Weiter"

[node name="RestartButton" type="Button" parent="."]
custom_minimum_size = Vector2(256, 96)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -66.0
offset_right = 128.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 32
text = "Neustart"

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(256, 96)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 62.0
offset_right = 128.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 32
text = "Schlie√üen"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
